20レビュー前

--- a/20/index.html
+++ b/20/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="flex flex-col items-center justify-center p-8">
-    <p class="text-center">課題20:日付を取得<br>
+    <p class="text-center mb-8">課題20:日付を取得<br>
       日付や時刻情報を取得しましょう
       以下項目を表示してください<br>
 
@@ -19,6 +19,9 @@
       - 今日の日付(yyyy年mm月dd日)<br>
       - 来年の年度(yyyy年)
     </p>
+    <div id="time" ></div>
+    <div id="date"></div>
+    <div id="nextFiscalYear"></div>
   </div>
 
   <script src="index.js"></script>
