時刻によって挨拶の種類を出し分ける処理を追加

--- a/21/index.html
+++ b/21/index.html
@@ -16,7 +16,7 @@
       表示する文字列は「こんにちは！〇〇さん！」<br>
       「〇〇」の部分については引数を設定し関数を呼出す
     </p>
-    <div id="sayHello"></div>
+    <div id="greeting"></div>
   </div>
 
   <script src="index.js"></script>
